Updating release notes for 2.36.10